--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/styles/output.css">
@@ -53,7 +54,7 @@
                             data-name="Hamburguer Salad"
                             data-price="28.90"
                         >
-                            <i class="fa fa-cart-plus text-lg text-white"></i>
+                            <i class="fa fa-cart-plus text-lg text-white hover:scale-110"></i>
                         </button>
                     </div>
                 </div>
@@ -76,7 +77,7 @@
                             data-name="Hamburguer Cheddar Bacon"
                             data-price="35.90"
                         >
-                            <i class="fa fa-cart-plus text-lg text-white"></i>
+                            <i class="fa fa-cart-plus text-lg text-white hover:scale-110"></i>
                         </button>
                     </div>
                 </div>
@@ -99,7 +100,7 @@
                             data-name="Hamburguer Smash"
                             data-price="28.90"
                         >
-                            <i class="fa fa-cart-plus text-lg text-white"></i>
+                            <i class="fa fa-cart-plus text-lg text-white hover:scale-110"></i>
                         </button>
                     </div>
                 </div>
@@ -122,7 +123,7 @@
                             data-name="Hamburguer Chicken"
                             data-price="30.00"
                         >
-                            <i class="fa fa-cart-plus text-lg text-white"></i>
+                            <i class="fa fa-cart-plus text-lg text-white hover:scale-110"></i>
                         </button>
                     </div>
                 </div>
@@ -152,7 +153,7 @@
                             data-name="Coca lata"
                             data-price="6.00"
                         >
-                            <i class="fa fa-cart-plus text-lg text-white"></i>
+                            <i class="fa fa-cart-plus text-lg text-white hover:scale-110"></i>
                         </button>
                     </div>
                 </div>
@@ -174,7 +175,7 @@
                             data-name="Guaraná lata"
                             data-price="5.00"
                         >
-                            <i class="fa fa-cart-plus text-lg text-white"></i>
+                            <i class="fa fa-cart-plus text-lg text-white hover:scale-110"></i>
                         </button>
                     </div>
                 </div>
@@ -185,7 +186,7 @@
     <!-- FIM DO MENU -->
 
     <!-- INÍCIO DO MODAL -->
-    <div class="bg-black/50 w-full h-full fixed top-0 left-0 z-[99] items-center justify-center hidden">
+    <div class="bg-black/50 w-full h-full fixed top-0 left-0 z-[99] items-center justify-center hidden" id="cart-modal">
         <div class="bg-white p-5 rounded-md min-w-[99%] md:min-w-[600px]">
             <h2 class="text-center font-bold text-2xl mb-2">Meu carrinho</h2>
 
@@ -202,8 +203,8 @@
             <p class="text-red-500 hidden" id="address-warn">Digite o endereço corretamente</p>
 
             <div class="flex items-center justify-between mt-5 w-full">
-                <button class="bg-red-700 text-white px-4 py-1 rounded" id="close-modal-btn">Fechar</button>
-                <button class="bg-green-500 text-white px-4 py-1 rounded" id="checkout-btn">Finalizar pedido</button>
+                <button class="bg-red-700 text-white px-4 py-1 rounded hover:scale-105" id="close-modal-btn">Fechar</button>
+                <button class="bg-green-500 text-white px-4 py-1 rounded hover:scale-105" id="checkout-btn">Finalizar pedido</button>
             </div>
         </div>
     </div>
@@ -217,9 +218,12 @@
         >
             (<span id="cart-count">0</span>)
             Veja seu carrinho
-            <i class="fa fa-cart-plus text-lg text-white"></i>
+            <i class="fa fa-cart-plus text-lg text-white hover:scale-110"></i>
         </button>
     </footer>
     <!-- FIM DO FOOTER -->
+    
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
