Construção da lógica e detalhes: atualização

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="DevBurguer - O melhor hamburguer !">
+    <meta property="og:image" content="">
+    <meta property="og:description" content="O melhor hamburguer caseiro para você !">
+    <meta property="og:site_name" content="DevBurguer">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
