--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:type" content="website">
     <meta property="og:title" content="DevBurguer - O melhor hamburguer !">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://projeto-cardapio-online-one.vercel.app/assets/hamb-1.png">
     <meta property="og:description" content="O melhor hamburguer caseiro para você !">
     <meta property="og:site_name" content="DevBurguer">
 
